--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,8 @@
         "php": "^8.1",
         "doctrine/dbal": "^3.0",
         "illuminate/support": "^10.0",
-        "laravel/jetstream": "^3.0 || dev-feat/livewire-3",
-        "laravel/socialite": "^5.6"
+        "laravel/jetstream": "^3.0 || ^4.0",
+        "laravel/socialite": "^5.8"
     },
     "require-dev": {
         "inertiajs/inertia-laravel": "^0.6.4",
