--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "doctrine/dbal": "^3.0",
-        "illuminate/support": "^10.0",
-        "laravel/jetstream": "^3.0 || ^4.0",
+        "laravel/jetstream": "^3.0|^4.0",
         "laravel/socialite": "^5.8"
     },
     "require-dev": {
